--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-size: 100%;
   box-sizing: border-box;
 }
 
@@ -17,6 +18,7 @@ html {
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: relative;
   color: $black;
 }
 
@@ -39,10 +41,18 @@ p {
 
 .contentContainer {
   margin: 0 50px;
+
+  @include breakpoint-max($screen-sm) {
+    margin: 0 50px 25px;
+  }
 }
 
 .paddingContainer {
   padding: 0 50px;
+
+  @include breakpoint-max($screen-sm) {
+    padding: 0;
+  }
 }
 
 footer {
@@ -55,6 +65,33 @@ footer {
   }
   p {
     display: inline;
+  }
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(-2%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes shrink {
+  0% {
+    width: 95%;
+  }
+  100% {
+    width: 90%;
   }
 }
 
