--- a/src/styles/pages/home/_businessServices.scss
+++ b/src/styles/pages/home/_businessServices.scss
@@ -15,6 +15,7 @@
     .textContainer {
       margin-left: -160px;
       margin-bottom: 290px;
+      z-index: 3;
 
       .businessTitle {
         @include font-sizer(36px);
@@ -23,6 +24,35 @@
       p {
         width: 85%;
         float: right;
+      }
+    }
+  }
+
+  @include breakpoint-max($screen-sm) {
+    margin-top: 0;
+    height: 652px;
+
+    .businessServiceContainer {
+      text-align: center;
+      display: block;
+      position: relative;
+
+      .textContainer {
+        margin: 0;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        height: 100%;
+      }
+
+      .businessImage {
+        bottom: 0;
+        left: 0;
+        position: absolute;
+        z-index: 0;
       }
     }
   }
