--- a/src/styles/pages/home/_businessServices.scss
+++ b/src/styles/pages/home/_businessServices.scss
@@ -30,7 +30,7 @@
 
   @include breakpoint-max($screen-sm) {
     margin-top: 0;
-    height: 652px;
+    height: 570px;
 
     .businessServiceContainer {
       text-align: center;
@@ -38,18 +38,19 @@
       position: relative;
 
       .textContainer {
+        padding-top: 40px;
         margin: 0;
         position: relative;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         text-align: center;
         height: 100%;
       }
 
       .businessImage {
-        bottom: 0;
+        bottom: 3%;
         left: 0;
         position: absolute;
         z-index: 0;
