--- a/src/styles/pages/home/_banner.scss
+++ b/src/styles/pages/home/_banner.scss
@@ -1,6 +1,6 @@
 #bannerContainer {
   padding: 0 50px;
-  height: calc(100vh - 280px);
+  height: calc(100vh - 140px);
   position: relative;
   display: flex;
   align-items: center;
@@ -27,7 +27,7 @@
   }
 
   @include breakpoint-max($screen-sm) {
-    margin: 70px 0;
+    margin: 45px 0 0;
     padding: 0 2.5%;
     display: block;
     position: relative;
@@ -43,6 +43,10 @@
       align-items: center;
       justify-content: center;
       text-align: center;
+
+      .bannerDescription {
+        opacity: 0.8;
+      }
     }
 
     .bannerImage {
@@ -50,6 +54,7 @@
       right: 0;
       position: absolute;
       z-index: 0;
+      opacity: 0.7;
     }
   }
 }
