style contact component for mobile

--- a/src/styles/pages/home/_contact.scss
+++ b/src/styles/pages/home/_contact.scss
@@ -6,7 +6,11 @@
   background-color: $lighterGray;
 
   .contactImage {
-    width: 51%;
+    display: none;
+    @include breakpoint-custom($screen-xs-max) {
+      display: block;
+      width: 45%;
+    }
   }
 
   #contactText {
