--- a/src/styles/pages/home/_services.scss
+++ b/src/styles/pages/home/_services.scss
@@ -1,3 +1,11 @@
+.serviceTitle {
+  margin-bottom: 40px;
+  text-align: center;
+  color: $black;
+  font-weight: 600;
+  @include font-sizer(28px);
+}
+
 .services {
   padding: 0 49.5px;
   width: 100%;
@@ -5,14 +13,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid #707070;
+  box-shadow: 0 1px 4px hsla(0, 0%, 0%, 0.2);
   border-radius: 13px;
   background-color: white;
   text-transform: capitalize;
   text-align: center;
   position: relative;
   z-index: 2;
-  @include font-sizer(30px);
+  @include font-sizer(26px);
   @include max-width-container();
 
   @each $currentColor in $servicesColorArray {
