remove kruft & tighten styles for mobile

--- a/src/styles/pages/home/_businessServices.scss
+++ b/src/styles/pages/home/_businessServices.scss
@@ -54,6 +54,11 @@
         left: 0;
         position: absolute;
         z-index: 0;
+        width: 100%;
+
+        @include breakpoint-custom($screen-xs-max) {
+          width: 60%;
+        }
       }
     }
   }
