--- a/src/styles/pages/home/_banner.scss
+++ b/src/styles/pages/home/_banner.scss
@@ -56,6 +56,11 @@
       position: absolute;
       z-index: 0;
       opacity: 0.7;
+      width: 100%;
+
+      @include breakpoint-custom($screen-xs-max) {
+        width: 72%;
+      }
     }
   }
 }
