--- a/src/styles/pages/home/_contact.scss
+++ b/src/styles/pages/home/_contact.scss
@@ -1,4 +1,6 @@
 .contactContainer {
+  padding: 90px 0;
+  height: 100%;
   position: relative;
   display: flex;
   justify-content: center;
@@ -36,9 +38,9 @@
     @include button($lightBlue, 0, 0);
   }
 
-  @include breakpoint-max($screen-sm) {
-    padding: 110px 0;
-    background-image: none;
-    height: 100%;
+  @include breakpoint-custom($screen-sm-max) {
+    // padding: 90px 0;
+    // background-image: none;
+    // height: 100%;
   }
 }
