--- a/src/styles/pages/home/_serviceCards.scss
+++ b/src/styles/pages/home/_serviceCards.scss
@@ -1,33 +1,30 @@
 @mixin backgroundImages {
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
 }
 
 .serviceCardContainer {
-  margin-bottom: 10vh;
+  padding: 0 2.5%;
+  margin-bottom: 0;
 
   .serviceCards {
     display: grid;
-    grid-template-columns: 1fr 4fr 4fr 1fr;
-    grid-template-rows: repeat(10, 5vw);
-    grid-gap: 1rem;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 12vh);
     grid-template-areas: 
-      ". . . ."
-      ". text text ."
-      ". left right ."
-      ". left right ."
-      ". left right ."
-      ". left right ."
-      ". wide wide ."
-      ". wide wide ."
-      ". wide wide ."
-      ". wide wide .";
+      "text"
+      "left"
+      "right"
+      "wide";
 
     .serviceCardText {
       grid-area: text;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
       .serviceCardTextTitle {
-        margin-top: auto;
         text-align: center;
 
         .serviceCardsLink {
@@ -40,15 +37,8 @@
 
     .serviceCard {
       border-radius: 13px;
+      position: relative;
       cursor: pointer;
-
-      &.serviceCard-1,
-      &.serviceCard-2,
-      &.serviceCard-3 {
-        position: relative;
-        background-size: cover;
-        background-repeat: no-repeat;
-      }
 
       &.serviceCard-1 {
         grid-area: left;
@@ -69,29 +59,35 @@
       }
 
       &:hover .overlay {
-        opacity: 1;
-        border-radius: inherit;
-        cursor: pointer;
+        opacity: 0;
+
+        @include breakpoint-custom($screen-sm-max) {
+          opacity: 1;
+          border-radius: inherit;
+          cursor: pointer;
+        }
       }
     }
 
-    @include breakpoint-max($screen-sm-max) {
-      grid-template-areas: 
-      ". . . ."
-      ". text text ."
-      ". . . ."
-      ". left left ."
-      ". left left ."
-      ". right right ."
-      ". right right ."
-      ". wide wide ."
-      ". wide wide ."
-      ". . . .";
-
-      .serviceCard:hover .overlay {
-        display: none;
-      }
+    @include breakpoint-custom($screen-sm-max) {
+      grid-template-columns: 5fr 5fr;
+      grid-template-rows: repeat(8, 8vh);
+      grid-gap: 1rem;
+      grid-template-areas:
+      "text text"
+      "left right"
+      "left right"
+      "left right"
+      "wide wide"
+      "wide wide"
+      "wide wide"
+      "wide wide";
     }
+  }
+
+  @include breakpoint-custom($screen-xs-max) {
+    padding: 0;
+    @include max-width-container(0, 5vh);
   }
 }
 
