--- a/src/styles/pages/home/_banner.scss
+++ b/src/styles/pages/home/_banner.scss
@@ -1,14 +1,31 @@
 #bannerContainer {
-  padding: 0 50px;
-  height: calc(100vh - 60px);
+  margin: 45px 0 0;
+  padding: 0 2.5%;
+  height: 780px;
   position: relative;
-  display: flex;
-  align-items: center;
+  display: block;
   overflow: visible;
-  @include max-width-container();
+
+  .bannerImage {
+    margin-left: -40px;
+    top: 4%;
+    right: 0;
+    position: absolute;
+    z-index: 0;
+    opacity: 0.7;
+    width: 100%;
+  }
 
   .bannerContent {
-    max-width: 40%;
+    z-index: 1;
+    position: relative;
+    max-width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     
     .bannerTitle {
       @include font-sizer(43px);
@@ -16,6 +33,7 @@
 
     .bannerDescription {
       margin: 30px 0 60px;
+      opacity: 0.8;
     }
 
     .bannerBtn {
@@ -26,41 +44,26 @@
     }
   }
 
-  @include breakpoint-max($screen-sm) {
-    margin: 45px 0 0;
-    padding: 0 2.5%;
-    display: block;
-    position: relative;
-    height: 780px;
+  @include breakpoint-custom($screen-sm-max) {
+    padding: 0 50px;
+    display: flex;
+    align-items: center;
+    height: calc(100vh - 60px);
+    @include max-width-container();
 
     .bannerContent {
-      z-index: 1;
-      position: relative;
-      max-width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
+      max-width: 40%;
+      text-align: left;
 
       .bannerDescription {
-        opacity: 0.8;
+        opacity: 0.6;
       }
     }
 
     .bannerImage {
-      margin-left: -40px;
-      top: 4%;
-      right: 0;
-      position: absolute;
-      z-index: 0;
-      opacity: 0.7;
-      width: 100%;
-
-      @include breakpoint-custom($screen-xs-max) {
-        width: 72%;
-      }
+      position: initial;
+      opacity: 1;
+      width: 72%;
     }
   }
 }
