--- a/src/styles/pages/aboutus/_main.scss
+++ b/src/styles/pages/aboutus/_main.scss
@@ -1,11 +1,14 @@
 #aboutUsContainer {
+  padding: 0 7.5%;
   height: calc(100vh - 30px);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
-  @include max-width-container();
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url('../images/linear_circle.png');
 
   h3 {
     text-align: center;
@@ -17,46 +20,8 @@
     }
   }
 
-  .circle-1 {
-    width: 550px;
-    height: 550px;
-    border-radius: 50%;
-    background-color: rgba($purple, 0.9);
-    position: absolute;
-    z-index: -1;
-    top: 0%;
-
-    @include breakpoint-custom($screen-sm-max) {
-      top: 1%;
-    }
-  }
-
-  .circle-2 {
-    width: 500px;
-    height: 500px;
-    border-radius: 50%;
-    background-color: rgba($lightBlue, 1);
-    position: absolute;
-    z-index: -2;
-    bottom: 21%;
-
-    @include breakpoint-custom($screen-sm-max) {
-      left: 16%;
-    }
-  }
-
-  .circle-3 {
-    width: 400px;
-    height: 400px;
-    border-radius: 50%;
-    background-color: rgba($orange, 0.7);
-    position: absolute;
-    z-index: -3;
-    bottom: -2%;
-
-    @include breakpoint-custom($screen-sm-max) {
-      right: 20%;
-      bottom: 7%;
-    }
+  @include breakpoint-custom($screen-xs-max) {
+    background-image: url('../images/circle.png');
+    @include max-width-container();
   }
 }
