remove extra semi-colon

--- a/src/styles/pages/home/_serviceCards.scss
+++ b/src/styles/pages/home/_serviceCards.scss
@@ -28,7 +28,7 @@
 
         .serviceCardsLink {
           color: $hotPink;
-          @include font-sizer(24px);;
+          @include font-sizer(24px);
           font-weight: 600;
         }
       }
